# project_manager

./: .gitignore  docker-compose.yml  package-lock.json
django/: Dockerfile  login_test_client.py  logout_test_client.py  pyproject.toml  register_test-client.py
django/backend/api/: gemini_service.py  gemini_tools.py  tests.py
django/backend/api/migrations/: 0001_initial.py  0002_alter_team_company_subtask.py
django/backend/api/models/: models.py
django/backend/api/serializers/: serializers.py
django/backend/api/views/: __init__.py  auth.py  employees.py  gemini.py  tasks.py  teams.py
django/backend/backend/: settings.py  urls.py
frontend/: Dockerfile
frontend/react/: package-lock.json  package.json
frontend/svelte/: package-lock.json  package.json
svelte/frontend/: README.md  package-lock.json  package.json
svelte/frontend/src/lib/: config.ts  index.ts  mock_data.ts
svelte/frontend/src/lib/api/: login.ts  tasks.ts
svelte/frontend/src/lib/components/: nav.svelte  wrapper_button.svelte
svelte/frontend/src/lib/components/forms/: login_form.svelte
svelte/frontend/src/routes/: +layout.svelte  +page.svelte
svelte/frontend/src/routes/analytics/: +page.server.ts  +page.svelte
svelte/frontend/src/routes/api/gemini-query/: +server.ts
svelte/frontend/src/routes/dashboard/: +page.server.ts  +page.svelte
svelte/frontend/src/routes/login/: +page.server.ts  +page.svelte
svelte/frontend/src/routes/register/: +page.server.ts  +page.svelte
svelte/frontend/src/routes/tasks/: +page.server.ts  +page.svelte
(+2 files in other folders)
